--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#A8C7FA</color>
 
     <color name="daynight_background">#1F1F1F</color>
-    <color name="daynight_textColor">#999FA6</color>
+    <color name="daynight_textColor">#A5A5A5</color>
 
     <color name="daynight_item_background">#000000</color>
 
