--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -20,4 +20,11 @@
         <item name="android:activityCloseExitAnimation">@android:anim/fade_out</item>
     </style>
 
+    <style name="MySeekBar" parent="Widget.AppCompat.SeekBar">
+
+        <item name="android:progressBackgroundTint">@color/daynight_textColor</item>
+        <item name="android:progressTint">@color/colorAccent</item>
+        <item name="android:colorControlActivated">@color/colorAccent</item>
+    </style>
+
 </resources>
