--- a/app/src/main/res/layout/text_menu.xml
+++ b/app/src/main/res/layout/text_menu.xml
@@ -2,8 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="?attr/actionBarSize"
-    android:background="@color/white">
+    android:layout_height="?attr/actionBarSize">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline5"
@@ -38,9 +37,9 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:alpha=".40"
+        android:background="@drawable/ripple"
         android:clickable="true"
         android:focusable="true"
-        android:background="@drawable/ripple"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline5"
@@ -61,9 +60,8 @@
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/poppins_semibold"
             android:text="@string/text_style"
-            android:textColor="@android:color/black"
+            android:textColor="@color/daynight_textColor"
             android:textSize="@dimen/_8sdp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -77,9 +75,9 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:alpha=".40"
+        android:background="@drawable/ripple"
         android:clickable="true"
         android:focusable="true"
-        android:background="@drawable/ripple"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline5"
         app:layout_constraintStart_toStartOf="@+id/guideline4"
@@ -100,9 +98,8 @@
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/poppins_semibold"
             android:text="@string/opacity"
-            android:textColor="@android:color/black"
+            android:textColor="@color/daynight_textColor"
             android:textSize="@dimen/_8sdp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -115,9 +112,9 @@
         android:id="@+id/textFont"
         android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:background="@drawable/ripple"
         android:clickable="true"
         android:focusable="true"
-        android:background="@drawable/ripple"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="parent"
@@ -137,9 +134,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/poppins_semibold"
             android:text="@string/font"
-            android:textColor="@android:color/black"
+            android:textColor="@color/daynight_textColor"
             android:textSize="@dimen/_8sdp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -153,9 +149,9 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:alpha=".40"
+        android:background="@drawable/ripple"
         android:clickable="true"
         android:focusable="true"
-        android:background="@drawable/ripple"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline4"
         app:layout_constraintStart_toStartOf="@+id/guideline3"
@@ -176,9 +172,8 @@
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/poppins_semibold"
             android:text="@string/color"
-            android:textColor="@android:color/black"
+            android:textColor="@color/daynight_textColor"
             android:textSize="@dimen/_8sdp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -192,9 +187,9 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:alpha=".40"
+        android:background="@drawable/ripple"
         android:clickable="true"
         android:focusable="true"
-        android:background="@drawable/ripple"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline3"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
@@ -215,9 +210,8 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/poppins_semibold"
             android:text="@string/size"
-            android:textColor="@android:color/black"
+            android:textColor="@color/daynight_textColor"
             android:textSize="@dimen/_8sdp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
