--- a/app/src/main/res/layout/image_container_svg.xml
+++ b/app/src/main/res/layout/image_container_svg.xml
@@ -32,9 +32,8 @@
         android:id="@+id/textView514"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/poppins_semibold"
         android:text="@string/camera"
-        android:textColor="#000000"
+        android:textColor="@color/daynight_textColor"
         android:textSize="@dimen/_12sdp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/imageView17"
@@ -45,9 +44,8 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/poppins_semibold"
         android:text="@string/gallery"
-        android:textColor="#000000"
+        android:textColor="@color/daynight_textColor"
         android:textSize="@dimen/_12sdp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/imageView16"
