--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -21,10 +21,21 @@
     </style>
 
     <style name="MySeekBar" parent="Widget.AppCompat.SeekBar">
-
         <item name="android:progressBackgroundTint">@color/daynight_textColor</item>
         <item name="android:progressTint">@color/colorAccent</item>
         <item name="android:colorControlActivated">@color/colorAccent</item>
+    </style>
+
+    <style name="full_screen_dialog" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
+    <style name="DialogAnimation">
+        <item name="android:windowEnterAnimation">@android:anim/fade_in</item>
+        <item name="android:windowExitAnimation">@android:anim/fade_out</item>
     </style>
 
 </resources>
