--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,27 @@
     <color name="daynight_item_background">#FFFFFF</color>
 
 
+    <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
+    <color name="gray">#9A9A9A</color>
+    <color name="lightGray">#E5E5E5</color>
+    <color name="containerBg">#FAFCFF</color>
+
+    <color name="transparent">#00000000</color>
+
+    <color name="red_100">#F44336</color>
+    <color name="red_300">#3F51B5</color>
+    <color name="red_500">#9C27B0</color>
+    <color name="red_700">#F32121</color>
+    <color name="blue_100">#00BCD4</color>
+    <color name="blue_300">#7BAAF7</color>
+    <color name="blue_500">#00796B</color>
+    <color name="blue_700">#3367D6</color>
+    <color name="green_100">#CDDC39</color>
+    <color name="green_300">#57BB8A</color>
+    <color name="green_500">#673AB7</color>
+    <color name="green_700">#0B8043</color>
+
+    <color name="Gold">#FFD700</color>
+
 </resources>
