--- a/app/src/main/res/layout/svg_container.xml
+++ b/app/src/main/res/layout/svg_container.xml
@@ -68,7 +68,7 @@
             android:id="@+id/include"
             layout="@layout/svg_menu"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="?attr/actionBarSize"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
