--- a/app/src/main/res/layout/text_container.xml
+++ b/app/src/main/res/layout/text_container.xml
@@ -93,7 +93,7 @@
             android:id="@+id/include2"
             layout="@layout/text_menu"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="?attr/actionBarSize"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
