--- a/app/src/main/res/layout/opacity_container_text.xml
+++ b/app/src/main/res/layout/opacity_container_text.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:text="@string/opacity"
-            android:textColor="@android:color/black"
+            android:textColor="@color/daynight_textColor"
             android:textSize="@dimen/_12sdp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -31,7 +31,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:thumbTint="@color/colorPrimary"
+            android:thumbTint="@color/colorAccent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textView5"
