--- a/app/src/main/res/layout/add_text_dialog.xml
+++ b/app/src/main/res/layout/add_text_dialog.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/daynight_background">
 
     <TextView
         android:id="@+id/textView346"
@@ -13,7 +14,7 @@
         android:singleLine="true"
         android:text="New Text"
         android:textAlignment="center"
-        android:textColor="#757575"
+        android:textColor="@color/daynight_textColor"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,8 +40,8 @@
 
     <ImageView
         android:id="@+id/checkImg"
-        android:layout_width="@dimen/_25sdp"
-        android:layout_height="@dimen/_25sdp"
+        android:layout_width="@dimen/_35sdp"
+        android:layout_height="@dimen/_35sdp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:contentDescription="@string/images"
@@ -50,8 +51,8 @@
 
     <ImageView
         android:id="@+id/clearImg"
-        android:layout_width="@dimen/_25sdp"
-        android:layout_height="@dimen/_25sdp"
+        android:layout_width="@dimen/_35sdp"
+        android:layout_height="@dimen/_35sdp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:contentDescription="@string/images"
