--- a/app/src/main/res/layout/font_container_text.xml
+++ b/app/src/main/res/layout/font_container_text.xml
@@ -46,7 +46,7 @@
             android:background="@color/colorAccent"
             android:padding="@dimen/_5sdp"
             android:text="@string/change_text"
-            android:textColor="@color/daynight_textColor"
+            android:textColor="#37474F"
             app:layout_constraintBottom_toBottomOf="@+id/imageView12"
             app:layout_constraintEnd_toStartOf="@+id/imageView12"
             app:layout_constraintStart_toStartOf="parent"
