--- a/app/src/main/res/layout/activity_editing_screen.xml
+++ b/app/src/main/res/layout/activity_editing_screen.xml
@@ -33,8 +33,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/arrow_back"
-             />
+            app:srcCompat="@drawable/arrow_back" />
 
         <TextView
             android:id="@+id/title"
