--- a/app/src/main/res/layout/svg_menu.xml
+++ b/app/src/main/res/layout/svg_menu.xml
@@ -165,6 +165,7 @@
             android:layout_width="@dimen/_24sdp"
             android:layout_height="@dimen/_24sdp"
             android:contentDescription="@string/images"
+            android:visibility="gone"
             app:layout_constraintBottom_toTopOf="@+id/textView2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
