--- a/app/src/main/res/layout/activity_editing_screen.xml
+++ b/app/src/main/res/layout/activity_editing_screen.xml
@@ -26,9 +26,10 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="@dimen/_24sdp"
-            android:layout_height="@dimen/_24sdp"
+            android:layout_width="@dimen/_30sdp"
+            android:layout_height="@dimen/_30sdp"
             android:layout_marginStart="16dp"
+            android:background="@drawable/ripple"
             android:contentDescription="@string/images"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -51,9 +52,10 @@
 
         <ImageView
             android:id="@+id/imageView4"
-            android:layout_width="@dimen/_22sdp"
-            android:layout_height="@dimen/_22sdp"
+            android:layout_width="@dimen/_30sdp"
+            android:layout_height="@dimen/_30sdp"
             android:layout_marginEnd="16dp"
+            android:background="@drawable/ripple"
             android:contentDescription="@string/images"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
