--- a/app/src/main/res/layout/add_text_dialog.xml
+++ b/app/src/main/res/layout/add_text_dialog.xml
@@ -44,6 +44,7 @@
         android:layout_height="@dimen/_35sdp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:background="@drawable/ripple"
         android:contentDescription="@string/images"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -55,6 +56,7 @@
         android:layout_height="@dimen/_35sdp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:background="@drawable/ripple"
         android:contentDescription="@string/images"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
