--- a/app/src/main/res/layout/save_preview.xml
+++ b/app/src/main/res/layout/save_preview.xml
@@ -39,8 +39,7 @@
             android:layout_height="@dimen/_45sdp"
             android:layout_marginStart="64dp"
             android:layout_marginEnd="64dp"
-            android:background="@drawable/round_bg"
-            android:backgroundTint="@color/daynight_textColor"
+            android:background="@drawable/round_bg_save"
             app:layout_constraintBottom_toTopOf="@+id/save_as_pdf"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -76,8 +75,7 @@
             android:id="@+id/save_as_pdf"
             android:layout_width="0dp"
             android:layout_height="@dimen/_45sdp"
-            android:background="@drawable/round_bg"
-            android:backgroundTint="@color/daynight_textColor"
+            android:background="@drawable/round_bg_save"
             app:layout_constraintBottom_toTopOf="@+id/btnCroos"
             app:layout_constraintEnd_toEndOf="@+id/save_as_png"
             app:layout_constraintHorizontal_bias="0.5"
@@ -113,8 +111,7 @@
             android:id="@+id/btnCroos"
             android:layout_width="0dp"
             android:layout_height="@dimen/_45sdp"
-            android:background="@drawable/round_bg"
-            android:backgroundTint="@color/daynight_textColor"
+            android:background="@drawable/round_bg_save"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/save_as_png"
             app:layout_constraintHorizontal_bias="0.5"
