--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,7 +8,7 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:textColorPrimary">@android:color/black</item>
         <!-- Customize your theme here. -->
-        <item name="fontFamily">@font/futura_bold</item>
+        <item name="fontFamily">@font/futura_normal</item>
 
         <item name="android:windowAnimationStyle">@style/CustomActivityAnimation</item>
     </style>
