--- a/app/src/main/res/layout/save_preview.xml
+++ b/app/src/main/res/layout/save_preview.xml
@@ -86,7 +86,7 @@
                 android:id="@+id/textView10"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/save_pdf"
+                android:text="@string/save_jpg"
                 android:textColor="@color/daynight_background"
                 android:textSize="@dimen/_14sdp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -104,7 +104,7 @@
                 app:layout_constraintEnd_toStartOf="@+id/textView10"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_round_picture_as_pdf" />
+                app:srcCompat="@drawable/ic_round_image" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
