--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
 
     <color name="daynight_item_background">#FFFFFF</color>
 
+    <color name="splas_bg_color">#E2D9D9</color>
 
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
